# Tutoriat-POO-2021-2022

./: .gitignore.txt
tutoriat-poo-01/: tutoriat-poo-01.md
tutoriat-poo-01/Seria CTI 26/pb00/: CMakeLists.txt  main.cpp
tutoriat-poo-01/Seria CTI 26/pp01/: main.cpp
tutoriat-poo-01/Seria CTI 26/pp02/: CMakeLists.txt
tutoriat-poo-01/Seria CTI 26/pp03/: main.cpp
tutoriat-poo-01/Seria MI 21/pb00/: CMakeLists.txt  main.cpp
tutoriat-poo-01/Seria MI 21/pb01/: main.cpp
tutoriat-poo-01/Seria MI 21/pb02/: CMakeLists.txt  main.cpp
tutoriat-poo-01/Seria MI 21/pb03/: CMakeLists.txt  data.txt  main.cpp
tutoriat-poo-01/pp01/: CMakeLists.txt
tutoriat-poo-01/pp02/: main.cpp
tutoriat-poo-01/pp03/: CMakeLists.txt
tutoriat-poo-02/: tutoriat-poo-02.md
tutoriat-poo-02/Seria CTI 26/pb01/: main.cpp
tutoriat-poo-07/colocviu-model1/: CMakeLists.txt  Copil.cpp  Copil.h  CopilCuminte.cpp  CopilCuminte.h  CopilNeastamparat.cpp  CopilNeastamparat.h  Jucarie.cpp  Jucarie.h  JucarieClasica.cpp  JucarieClasica.h  JucarieEducativa.cpp  JucarieEducativa.h  JucarieElectronica.cpp  JucarieElectronica.h  JucarieModerna.cpp  JucarieModerna.h  Meniu.cpp  Meniu.h  main.cpp
tutoriat-poo-07/pb01/: main.cpp
tutoriat-poo-08/Seria CTI 26/model-01/: CMakeLists.txt  Copil.cpp  Copil.h  CopilCuminte.cpp  CopilCuminte.h  CopilNeastamparat.cpp  CopilNeastamparat.h  Jucarie.cpp  Jucarie.h  JucarieClasica.cpp  JucarieClasica.h  JucarieEducativa.cpp  JucarieEducativa.h  JucarieElectronica.cpp  JucarieElectronica.h  JucarieModerna.cpp  JucarieModerna.h  Meniu.cpp  Meniu.h  main.cpp
(+59 files in other folders)
