cmake_minimum_required(VERSION 3.20)
project(colocviu_model1)

set(CMAKE_CXX_STANDARD 14)

add_executable(colocviu_model1 main.cpp Jucarie.cpp Jucarie.h JucarieClasica.cpp JucarieClasica.h JucarieElectronica.cpp JucarieElectronica.h JucarieEducativa.cpp JucarieEducativa.h JucarieModerna.cpp JucarieModerna.h Copil.cpp Copil.h)
