cmake_minimum_required(VERSION 3.20)
project(model_01)

set(CMAKE_CXX_STANDARD 14)

add_executable(model_01 main.cpp Jucarie.cpp Jucarie.h JucarieClasica.cpp JucarieClasica.h JucarieEducativa.cpp JucarieEducativa.h JucarieElectronica.cpp JucarieElectronica.h JucarieModerna.cpp JucarieModerna.h Copil.cpp Copil.h)
